Bug 403019 - Actual cursor size not displayed; combobox always says "Resolution Independent"
Summary: Actual cursor size not displayed; combobox always says "Resolution Independent"
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_cursortheme (other bugs)
Version First Reported In: 5.14.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 400397 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-09 06:56 UTC by alt.su-7oon2u5b
Modified: 2019-01-23 15:56 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alt.su-7oon2u5b 2019-01-09 06:56:55 UTC
SUMMARY
System Settings > Cursor Theme, doesn't show the currently active cursor size

STEPS TO REPRODUCE
1. Go to System Settings > Cursor Theme
2. Choose a different size (eg.: Resolution dependent > 24) 
3. Apply

OBSERVED RESULT
The settings are applied, but if you go back to System Settings > Cursor Theme, "Resolution dependent" will still be selected by default

EXPECTED RESULT
In the "Size" drop-down menu, the option that's actually in use (eg. 24) should be shown / selected by default
Comment 1 David Edmundson 2019-01-09 12:36:44 UTC
X or wayland?
Comment 2 alt.su-7oon2u5b 2019-01-09 14:27:27 UTC
X
Comment 3 Nate Graham 2019-01-15 17:51:40 UTC
Confirmed for me too on 5.14.5 and git master.
Comment 4 Patrick Silva 2019-01-22 19:41:42 UTC
bug 400397 seems duplicate/related.
Comment 5 Nate Graham 2019-01-23 03:48:58 UTC
*** Bug 400397 has been marked as a duplicate of this bug. ***
Comment 6 David Edmundson 2019-01-23 15:49:00 UTC
Git commit 9096bdefc66edff93f061f5b2f6b2e71dfdb49e5 by David Edmundson.
Committed on 23/01/2019 at 15:48.
Pushed by davidedmundson into branch 'Plasma/5.15'.

[kcms/cursortheme] Fix size combo

Summary:
The biggest problem fixed was that m_preferredSize was sometimes treated
as
an absolute value, sometimes as an index. This patch splits the two
concepts.

It also fixes the binding of the combobox to handle updates properly.

Test Plan:
Clicked between themes
Closed and reopened the KCM had a valid value

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18471

M  +15   -8    kcms/cursortheme/kcmcursortheme.cpp
M  +5    -6    kcms/cursortheme/kcmcursortheme.h
M  +9    -4    kcms/cursortheme/package/contents/ui/main.qml

https://commits.kde.org/plasma-desktop/9096bdefc66edff93f061f5b2f6b2e71dfdb49e5